<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sidedash">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv1"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_person_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/e1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv1"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@color/cardview_shadow_end_color"
                app:drawableStartCompat="@drawable/ic_email_black_24dp"
                android:ems="10"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                tools:ignore="RtlCompat"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/e2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            app:counterMaxLength="8"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color1"
            tools:ignore="UnknownId">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/e1"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@color/cardview_shadow_end_color"
                app:drawableStartCompat="@drawable/ic_lock_black_24dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                tools:ignore="RtlCompat"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/e2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password_click_here"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold|normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b1"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/tv"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold|normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b3"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/b1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:text="@string/register_here"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold|normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b2"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@+id/b3"
            android:layout_alignEnd="@id/b1"
            android:layout_alignRight="@id/b1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="81dp"
            android:layout_marginLeft="81dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:width="20dp"
            android:background="@drawable/round_button"
            android:text="@string/skip"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="normal|bold" />


    </RelativeLayout>

</ScrollView>